
	* tracker connections are now also subject to IP filtering
	* improved optimistic unchoke logic
	* added monitoring of the DHT lookups
	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter

release 0.14

	* deprecated add_torrent() in favor of a new add_torrent()
	  that takes a struct with parameters instead. Torrents
	  are paused and auto managed by default.
	* removed 'connecting_to_tracker' torrent state. This changes
	  the enum values for the other states.
	* Improved seeding and choking behavior.
	* Fixed rare buffer overrun bug when calling get_download_queue
	* Fixed rare bug where torrent could be put back into downloading
	  state even though it was finished, after checking files.
	* Fixed rename_file to work before the file on disk has been
	  created.
	* Fixed bug in tracker connections in case of errors caused
	  in the connection constructor.
	* Updated alert system to be filtered by category instead of
	  severity level. Alerts can generate a message through
	  alert::message().
	* Session constructor will now start dht, upnp, natpmp, lsd by
	  default. Flags can be passed in to the constructor to not
	  do this, if these features are to be enabled and disabled
	  at a later point.
	* Removed 'connecting_to_tracker' torrent state
	* Fix bug where FAST pieces were cancelled on choke
	* Fixed problems with restoring piece states when hash failed.
	* Minimum peer reconnect time fix. Peers with no failures would
	  reconnect immediately.
	* Improved web seed error handling
	* DHT announce fixes and off-by-one loop fix
	* Fixed UPnP xml parse bug where it would ignore the port number
	  for the control url.
	* Fixed bug in torrent writer where the private flag was added
	  outside of the info dictionary
	* Made the torrent file parser less strict of what goes in the
	  announce-list entry
	* Fixed type overflow bug where some statistics was incorrectly
	  reported for file larger than 2 GB