@@ -35,6 +35,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #include "libtorrent/socket.hpp"
 #include "libtorrent/session_settings.hpp"
+#include "libtorrent/buffer.hpp"
 
 #include <vector>
 #include <boost/function.hpp>
@@ -111,6 +112,29 @@ namespace libtorrent
 #ifndef NDEBUG
 		int m_magic;
 #endif
+	};
+
+	struct rate_limited_udp_socket : public udp_socket
+	{
+		rate_limited_udp_socket(io_service& ios, callback_t const& c, connection_queue& cc);
+		void set_rate_limit(int limit) { m_rate_limit = limit; }
+		bool can_send() const { return int(m_queue.size()) >= m_queue_size_limit; }
+		bool send(udp::endpoint const& ep, char const* p, int len, error_code& ec);
+
+	private:
+		struct queued_packet
+		{
+			udp::endpoint ep;
+			buffer buf;
+		};
+		void on_tick(error_code const& e);
+
+		deadline_timer m_timer;
+		int m_queue_size_limit;
+		int m_rate_limit;
+		int m_quota;
+		ptime m_last_tick;
+		std::list<queued_packet> m_queue;
 	};
 }
 
